Added ML-KEM to appendix

--- a/crypto2025/biblio.bib
+++ b/crypto2025/biblio.bib
@@ -1131,3 +1131,18 @@
   doi = {10.6028/NIST.FIPS.202},
   url = {http://dx.doi.org/10.6028/NIST.FIPS.202}
 }
+
+@misc{kyberrefimpl,
+  author       = {Joppe W. Bos and
+                  L{\'{e}}o Ducas and
+                  Eike Kiltz and
+                  Tancr{\`{e}}de Lepoint and
+                  Vadim Lyubashevsky and
+                  John M. Schanck and
+                  Peter Schwabe and
+                  Gregor Seiler and
+                  Damien Stehl{\'{e}}},
+  title={official reference implementation of the Kyber key encapsulation mechanism},
+  year={2024},
+  url={https://github.com/pq-crystals/kyber},
+}
