--- a/crypto2025/main.tex
+++ b/crypto2025/main.tex
@@ -43,18 +43,19 @@
 %\titlerunning{Abbreviated paper title}
 
 \author{
-    Ganyu Xu\inst{1} \and
-    Guang Gong\inst{1} \and
-    Kalikinkar Mandal\inst{2}
+    % Ganyu Xu\inst{1} \and
+    % Guang Gong\inst{1} \and
+    % Kalikinkar Mandal\inst{2}
+    Anonymous submission
 }
 % First names are abbreviated in the running head.
 % If there are more than two authors, 'et al.' is used.
-\authorrunning{G. Xu et al.}
+% \authorrunning{G. Xu et al.}
 
 \institute{
-    University of Waterloo, Waterloo, Ontario, Canada
-    \email{\{g66xu,ggong\}@uwaterloo.ca} \and
-    University of New Brunswick, Canada \email{kmandal@unb.ca}
+    % University of Waterloo, Waterloo, Ontario, Canada
+    % \email{\{g66xu,ggong\}@uwaterloo.ca} \and
+    % University of New Brunswick, Canada \email{kmandal@unb.ca}
 }
 
 \maketitle              % typeset the header of the contribution
@@ -168,7 +169,7 @@ Despite its widespread adoption, the Fujisaki-Okamoto transformation has many fl
 \end{itemize}
 
 \subsection{Paper organization}\label{sec:paper-organization}
-In Section \ref{sec:preliminaries}, we review the preliminary definitions and theorems. In Section \ref{sec:the-enc-then-mac-transformation}, we present the encrypt-then-MAC KEM transformation, proves its CCA security, and discusses practical attacks. In Section \ref{sec:application-to-elgamal}, we show that the encrypt-then-MAC transformation is a generalization of DHIES by applying it to the ElGamal cryptosystem. In Section \ref{sec:application-to-mceliece}, we present McEliece+, an instantiation of the encrypt-then-MAC transformation, benchmark, and compare the performance of McEliece+ with Classic McEliece.
+In Section \ref{sec:preliminaries}, we review the preliminary definitions and theorems. In Section \ref{sec:the-enc-then-mac-transformation}, we present the encrypt-then-MAC KEM transformation, proves its CCA security, and discusses practical attacks. In Section \ref{sec:application-to-mceliece}, we present McEliece+, an instantiation of the encrypt-then-MAC transformation, benchmark, and compare the performance of McEliece+ with Classic McEliece. In Section \ref{sec:application-to-elgamal}, we show that the encrypt-then-MAC transformation is a generalization of DHIES. 
 
 \section{Preliminaries}\label{sec:preliminaries}
 \subsection{Public-key encryption scheme}
@@ -1103,4 +1104,182 @@ We speculate that because Shor's algorithm \cite{DBLP:conf/focs/Shor94,DBLP:jour
 
 \bibliographystyle{splncs04}
 \bibliography{biblio.bib}
+
+\appendix
+\section{ML-KEM+: applying encrypt-then-MAC to ML-KEM}
+We apply the encrypt-then-MAC transformation to the K-PKE routines of ML-KEM. The resulting KEM is called $\mlkemplus$ (See Figure \ref{fig:ml-kem-plus-routines}). The key generation routines are identical between $\mlkemplus$ and ML-KEM. The $\mlkemplus$  encapsulation and decapsulation algorithms make use of two additional algorithms, namely a {\sf MAC} and a {\sf KDF}.
+
+\begin{figure}[h]
+    \centering
+
+    \begin{minipage}[t]{0.5\textwidth}
+        \begin{algorithm}[H]
+            \caption*{$\texttt{ML-KEM}^\texttt{+}\texttt{.}\keygen\texttt{()}$}
+            \begin{algorithmic}[1]
+                \State $z \leftsample \{0,1\}^{256}$
+                \State $(\pk, \sk^\prime) \leftsample \texttt{K-PKE}.\keygen()$
+                \State $h \leftarrow H(\pk)$
+                \State $\sk \leftarrow (sk^\prime \Vert \pk \Vert h \Vert z)$
+                \State \Return $(\pk, \sk)$
+            \end{algorithmic}
+        \end{algorithm}\vspace{-0.5cm}
+        \begin{algorithm}[H]
+            \caption*{$\texttt{ML-KEM}^\texttt{+}\texttt{.}\encap\texttt{(\pk)}$}
+            \begin{algorithmic}[1]
+                \State $m \leftsample \{0,1\}^{256}$
+                \State $(\overline{K}, k) \leftarrow G(m \Vert H(\pk))$
+                \State $c^\prime \leftsample \texttt{K-PKE}.\encrypt(\pk, m)$
+                \State $t \leftarrow \mac(k, c^\prime)$
+                \State $K \leftarrow \texttt{KDF}(\overline{K} \Vert t)$
+                \State $c \leftarrow (c^\prime, t)$
+                \State \Return $(c, K)$
+            \end{algorithmic}
+        \end{algorithm}
+    \end{minipage}\hfill
+    \begin{minipage}[t]{0.49\textwidth}
+        \begin{algorithm}[H]
+            \caption*{$\texttt{ML-KEM}^\texttt{+}\texttt{.}\decap\texttt{(\sk, c)}$}
+            \begin{algorithmic}[1]
+                \Require Secret key $\sk = (\sk^\prime \Vert \pk \Vert h \Vert z)$
+                \Require Ciphertext $c = (c^\prime \Vert t)$
+                \State $(\sk^\prime, \pk, h, z) \leftarrow \sk$
+                \State $(c^\prime, t) \leftarrow c$
+                \State $\hat{m} \leftarrow \texttt{K-PKE}.\decrypt(\sk^\prime, c^\prime)$
+                \State $(\overline{K}, \hat{k}) \leftarrow G(\hat{m} \Vert h)$
+                \State $\hat{t} \leftarrow \mac(\hat{k}, c^\prime)$
+                \If{$\hat{t} = t$}
+                    \State $K \leftarrow \texttt{KDF}(\overline{K} \Vert t)$
+                \Else
+                    \State $K \leftarrow \texttt{KDF}(z \Vert c)$
+                \EndIf
+                \State \Return $K$
+            \end{algorithmic}
+        \end{algorithm}
+    \end{minipage}
+
+    \caption{$\mlkemplus$ applies our encrypt-then-MAC transformation to the K-PKE sub-routines of ML-KEM. $G$ is SHA3-512, $H$ is SHA3-256, $\texttt{KDF}$ is Shake256}\label{fig:ml-kem-plus-routines}
+\end{figure}
+
+We measured the real-world performance of the individual routines of our $\mlkemplus$ construction. Our implementation extended from the Kyber implementation \cite{kyberrefimpl}. All C code is compiled with \texttt{GCC 11.4.1} and \texttt{OpenSSL 3.0.8}. All binaries are executed on an AWS c7a.medium instance (AMD EPYC 9R14 CPU at 3.7 GHz and 1 GB of RAM) in the \texttt{us-west-2} region.
+
+Compared to the $\kem^{\not\bot}_m$ variant of Fujisaki-Okamoto transformed used in ML-KEM, the encrypt-then-MAC transformation achieves massive CPU cycle count reduction in decapsulation while incurring only a minimal increase of encapsulation cycle count and ciphertext size. Since \texttt{K-PKE.\encrypt} carries significantly more computational complexity than \texttt{K-PKE.\decrypt} or any MAC we chose, the performance advantage of the encrypt-then-MAC transformation over the $\kem^{\not\bot}_m$ transformation is dominated by the runtime saving gained from replacing \emph{re-encryption} with MAC. A comparison between ML-KEM and variations of the $\mlkemplus$ can be found in Table \ref{tbl:kem-performance}.
+
+\emph{Remark.} We also included the performance of Kyber as it is submitted to the third round of the NIST PQC standardization project, which differs from ML-KEM by deriving the shared secret from hashing the public key, the PKE plaintext, and the PKE ciphertext, while ML-KEM derives its shared secret by hashing only the public key and the PKE plaintext. This results in ML-KEM having meaningful performance improvement in encapsulation over Kyber, though the performance difference in decapsulation is negligible.
+
+\begin{table}[h]
+    \centering
+    \footnotesize
+    \caption{CPU cycles of each KEM routine}\label{tbl:kem-performance}
+
+    % \begin{tabular}[t]{|cc|}
+    %     \hline
+    %     \multicolumn{2}{|c|}{\bf 128-bit security} \\
+    %     \hline
+    %     \multicolumn{2}{|c|}{size parameters (bytes)} \\
+    %     $\pk$ size & 800 \\
+    %     $\sk$ size & 1632 \\
+    %     \text{ct} size & 768 \\
+    %     \hline
+    %     \multicolumn{2}{|c|}{$\keygen$ cycles/tick} \\
+    %     Median & 75945 \\
+    %     Average & 76171 \\
+    %     \hline
+    % \end{tabular}
+    \begin{tabular}[t]{|c|c|c|c|c|}
+        \hline
+        \multirow{2}{*}{KEM variant} 
+        & \multicolumn{2}{|c|}{$\encap$ cycles/tick} 
+        & \multicolumn{2}{|c|}{$\decap$ cycles/tick} \\
+        \cline{2-5}
+        & Median & Average & Median & Average \\
+        \hline
+        \text{ML-KEM-512} & 91467 & 92065 & 121185 & 121650 \\
+        \hline
+        \text{Kyber512} & 97811 & 98090 & 119937 & 120299 \\
+        \hline
+        % ML-KEM+-512
+        $\mlkemplus$-512 w/ Poly1305 & 93157 & 93626 & 33733 & 33908 \\
+        \hline
+        $\mlkemplus$-512 w/ GMAC & 97369 & 97766 & 37725 & 37831 \\
+        \hline
+        $\mlkemplus$-512 w/ CMAC & 99739 & 99959 & 40117 & 39943 \\
+        \hline
+        $\mlkemplus$-512 w/ KMAC & 101009 & 101313 & 40741 & 40916 \\
+        \hline
+    \end{tabular}\vspace{0.3cm}
+
+    % TODO: 128-bit tag size is unsuitable for higher security level
+    % \begin{tabular}[t]{|cc|}
+    %     \hline
+    %     \multicolumn{2}{|c|}{\bf 192-bit security} \\
+    %     \hline
+    %     \multicolumn{2}{|c|}{size parameters (bytes)} \\
+    %     $\pk$ size & 1184 \\
+    %     $\sk$ size & 2400 \\
+    %     \text{ct} size & 1088 \\
+    %     \hline
+    %     \multicolumn{2}{|c|}{$\keygen$ cycles/tick} \\
+    %     Median & 129895 \\
+    %     Average & 130650 \\
+    %     \hline
+    % \end{tabular}
+    \begin{tabular}[t]{|c|c|c|c|c|}
+        \hline
+        \multirow{2}{*}{KEM variant} 
+        & \multicolumn{2}{|c|}{$\encap$ cycles/tick} 
+        & \multicolumn{2}{|c|}{$\decap$ cycles/tick} \\
+        \cline{2-5}
+        & Median & Average & Median & Average \\
+        \hline
+        \text{ML-KEM-768} & 136405 & 147400 & 186445 & 187529 \\
+        \hline
+        \text{Kyber768} & 153061 & 153670 & 182129 & 182755 \\
+        \hline
+        % $\mlkemplus$-768 w/ Poly1305 & 146405 & 146860 & 43315 & 43463 \\
+        % \hline
+        % $\mlkemplus$-768 w/ GMAC & 149525 & 150128 & 46513 & 46706 \\
+        % \hline
+        % $\mlkemplus$-768 w/ CMAC & 153139 & 153735 & 49841 & 50074 \\
+        % \hline
+        $\mlkemplus$-768 w/ KMAC & 155219 & 155848 & 52415 & 52611 \\
+        \hline
+    \end{tabular}\vspace{0.3cm}
+
+    % \begin{tabular}[t]{|cc|}
+    %     \hline
+    %     \multicolumn{2}{|c|}{\bf 256-bit security} \\
+    %     \hline
+    %     \multicolumn{2}{|c|}{size parameters (bytes)} \\
+    %     $\pk$ size & 1568 \\
+    %     $\sk$ size & 3168 \\
+    %     \text{ct} size & 1568 \\
+    %     \hline
+    %     \multicolumn{2}{|c|}{$\keygen$ cycles/tick} \\
+    %     Median & 194921 \\
+    %     Average & 195465 \\
+    %     \hline
+    % \end{tabular}
+    \begin{tabular}[t]{|c|c|c|c|c|}
+        \hline
+        \multirow{2}{*}{KEM variant} 
+        & \multicolumn{2}{|c|}{$\encap$ cycles/tick} 
+        & \multicolumn{2}{|c|}{$\decap$ cycles/tick} \\
+        \cline{2-5}
+        & Median & Average & Median & Average \\
+        \hline
+        \text{ML-KEM-1024} & 199185 & 199903 & 246245 & 247320 \\
+        \hline
+        \text{Kyber1024} & 222351 & 223260 & 258231 & 259067 \\
+        \hline
+        % $\mlkemplus$-1024 w/ Poly1305 & 205763 & 206499 & 51375 & 51562 \\
+        % \hline
+        % $\mlkemplus$-1024 w/ GMAC & 208805 & 209681 & 54573 & 54780 \\
+        % \hline
+        % $\mlkemplus$-1024 w/ CMAC & 213667 & 214483 & 59175 & 59408 \\
+        % \hline
+        $\mlkemplus$-1024 w/ KMAC & 216761 & 217468 & 62269 & 62516 \\
+        \hline
+    \end{tabular}
+\end{table}
 \end{document}
+
