added table for McEliece parameters

--- a/crypto2025/biblio.bib
+++ b/crypto2025/biblio.bib
@@ -815,6 +815,30 @@
   note         = {Accessed: 2025-01-20}
 }
 
+@misc{classic-mceliece-security-guide,
+  author       = {Daniel J. Bernstein and  
+                  Tung Chou and  
+                  Tanja Lange and  
+                  Ingo von Maurich and  
+                  Rafael Misoczki and  
+                  Ruben Niederhagen and  
+                  Edoardo Persichetti and  
+                  Christiane Peters and  
+                  Peter Schwabe and  
+                  Nicolas Sendrier and  
+                  Jakub Szefer and  
+                  Wen Wang and  
+                  Martin Albrecht and  
+                  Carlos Cid and  
+                  Kenneth G. Paterson and  
+                  Cen Jung Tjhai and  
+                  Martin Tomlinson},
+  title        = {Classic {McEliece}: Conservative Code-Based Cryptography: Guide for Security Reviewers},
+  year         = {2022},
+  month        = {October 23},
+  url          = {https://classic.mceliece.org/mceliece-security-20221023.pdf}
+}
+
 
 @inproceedings{DBLP:conf/ctrsa/HaleviR04,
   author       = {Shai Halevi and
@@ -843,6 +867,7 @@
       year = {2024},
       url = {https://eprint.iacr.org/2024/1049}
 }
+
 @misc{cryptoeprint:2024/2051,
       author = {Alexandre Berzati and Andersson Calle Viera and Maya Chartouny and David Vigilant},
       title = {Simple Power Analysis assisted Chosen Cipher-Text Attack on {ML}-{KEM}},
